# trapi

./: .env.example  .gitignore  Cargo.toml  README.md  vercel.json
api/: index.rs
migrations/: 20260406210000_create_users_and_workouts.sql
scripts/: bootstrap_db.sh
src/: app.rs  config.rs  db.rs  lib.rs  main.rs  state.rs
src/features/: mod.rs
src/features/auth/: extractor.rs  mod.rs  routes.rs
src/features/docs/: routes.rs
src/features/health/: mod.rs  routes.rs
src/features/workouts/: mod.rs  routes.rs
